checked tutorial parts

--- a/docs/_source/tutorials/notebooks/labelling-textclassification-setfit-zeroshot.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-setfit-zeroshot.ipynb
@@ -13,7 +13,7 @@
     "\n",
     "- 💾 Use sentence transformers to generate embeddings of a dataset with banking customer requests.\n",
     "- 🔫 Use SetFit's zero-shot classifier and upload its predictions together with the embeddings.\n",
-    "- 🏷 Leverage similarity search and pre-annotated examples to efficiently label bulks of semantically-related, high impact examples.\n",
+    "- 🏷 Leverage similarity search and pre-annotated examples to efficiently label bulks of semantically related, high-impact examples.\n",
     "- 🦾 Train a few-shot SetFit model to improve the results of the zero-shot model.\n",
     "\n",
     "\n",
@@ -401,7 +401,7 @@
    "source": [
     "## 🔫 Zero-shot predictions with SetFit\n",
     "\n",
-    "The original `banking77` dataset is an intent classification dataset with dozens of labels (`lost_card`, `card_arrival`, etc.). To keep this tutorial simple, we define a simplified labeling scheme with higher level classes.\n",
+    "The original `banking77` dataset is an intent classification dataset with dozens of labels (`lost_card`, `card_arrival`, etc.). To keep this tutorial simple, we define a simplified labeling scheme with higher-level classes.\n",
     "\n",
     "\n",
     "Let's set up and train our zero-shot SetFit model. Please note that SetFit's approach to zero-shot is to create a synthetic dataset of training examples, which is different from other approaches (e.g., transformers zero-shot pipelines) where \"templated\" examples with label names are used at inference time."
@@ -437,7 +437,7 @@
     "id": "Sp3oSMi9snkp"
    },
    "source": [
-    "We can use our trained zero-shot model to predict over the dataset. We'll later load these predictions into Argilla and use them to speed-up the labeling process."
+    "We can use our trained zero-shot model to predict over the dataset. We'll later load these predictions into Argilla and use them to speed up the labeling process."
    ]
   },
   {
@@ -492,10 +492,10 @@
    },
    "source": [
     "## 🏷 Bulk labeling with the `find similar` and zero-shot predictions\n",
-    "Now that our `banking77-topics-setfit` is available from the Argilla UI. You can start annotating the data by leveraging similarity search and our zero-shot predictions. After going to your Argilla UI URL, the workflow is following:\n",
+    "Now that our `banking77-topics-setfit` is available from the Argilla UI. You can start annotating the data by leveraging similarity search and our zero-shot predictions. After going to your Argilla UI URL, the workflow is as follows:\n",
     "\n",
     "1. Label a record (e.g., label \"Change my information\" as `change details`) and then click on Find similar on the top-right of your record.\n",
-    "2. As a result, you'll get to a list of the most similar record sorted by similarity with their corresponding predictions.\n",
+    "2. As a result, you'll get to a list of the most similar records sorted by similarity with their corresponding predictions.\n",
     "3. You can now review the predictions, validate them, or correct them.\n",
     "\n",
     "\n",
