--- a/docs/_source/tutorials/notebooks/labelling-textclassification-sklearn-weaksupervision.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-sklearn-weaksupervision.ipynb
@@ -34,7 +34,7 @@
     "\n",
     "Note\n",
     "\n",
-    "The `Snorkel` and `FlyingSquid` label models do not support multi-label classification out-of-the-box.\n",
+    "The `Snorkel` and `FlyingSquid` label models do not support multi-label classification out of the box.\n",
     "    \n",
     "</div>"
    ]
@@ -80,7 +80,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "For this tutorial, you'll need to install the Argilla client and a few third party libraries using `pip`:"
+    "For this tutorial, you'll need to install the Argilla client and a few third-party libraries using `pip`:"
    ]
   },
   {
@@ -180,7 +180,7 @@
    "source": [
     "### Define rules\n",
     "\n",
-    "Let us start by downloading our curated version of the dataset from the Hugging Face Hub, and log it to Argilla:"
+    "Let us start by downloading our curated version of the dataset from the Hugging Face Hub, and logging it to Argilla:"
    ]
   },
   {
@@ -214,7 +214,7 @@
    "metadata": {},
    "source": [
     "After uploading the dataset, we can explore and inspect it to find good heuristic rules.\n",
-    "For this we highly recommend the dedicated [*Define rules* mode](../reference/webapp/define_rules.md) of the Argilla web app, that allows you to quickly iterate over heuristic rules, compute their metrics and save them.\n",
+    "For this, we highly recommend the dedicated [*Define rules* mode](../../reference/webapp/features.md#weak-labeling) of the Argilla web app, that allows you to quickly iterate over heuristic rules, compute their metrics and save them.\n",
     "\n",
     "Here we copy our rules found via the web app to the notebook for you to easily follow along the tutorial."
    ]
@@ -265,10 +265,10 @@
     "We go on and apply these heuristic rules to our dataset creating our weak label matrix.\n",
     "Since we are dealing with a multi-label classification task, the weak label matrix will have 3 dimensions.\n",
     "\n",
-    "> Dimensions of the weak multi label matrix: *number of records* x *number of rules* x *number of labels* \n",
+    "> Dimensions of the weak multi-label matrix: *number of records* x *number of rules* x *number of labels* \n",
     "\n",
-    "It will be filled with 0 and 1, depending on if the rule voted for the respective label or not.\n",
-    "If the rule abstained for a given record, the matrix will be filled with -1. \n",
+    "It will be filled with 0 and 1, depending on whether the rule voted for the respective label or not.\n",
+    "If the rule is abstained for a given record, the matrix will be filled with -1. \n",
     "\n",
     "We can call the `weak_labels.summary()` method to check the precision of each rule as well as our total coverage of the dataset."
    ]
@@ -708,7 +708,7 @@
    "id": "88b3fffe",
    "metadata": {},
    "source": [
-    "We can observe that \"joking\" does not have any support and also \"do you\" is not informative, because its correct/incorrect ratio equals to 1. We can delete these two rules from the dataset using \"delete_rules\" method "
+    "We can observe that \"joking\" does not have any support and also \"do you\" is not informative, because its correct/incorrect ratio equals 1. We can delete these two rules from the dataset using \"delete_rules\" method "
    ]
   },
   {
@@ -1125,7 +1125,7 @@
     "\n",
     "        Rule(\"yeah\", \"optimism\"),\n",
     "\n",
-    "Let's update this two rules such that:\n",
+    "Let's update these two rules such that:\n",
     "\n",
     "        Rule('\"great\"', [\"admiration\"])\n",
     "\n",
@@ -1151,7 +1151,7 @@
    "id": "296ba48a",
    "metadata": {},
    "source": [
-    "Lets' run weak labeling with final rules of the dataset"
+    "Let us run weak labeling with the final rules of the dataset"
    ]
   },
   {
@@ -1592,7 +1592,7 @@
    "id": "50bb4a12",
    "metadata": {},
    "source": [
-    "__optimism_rule__ is not informative so we don't add it to dataset"
+    "__optimism_rule__ is not informative so we don't add it to the dataset"
    ]
   },
   {
@@ -1635,7 +1635,7 @@
    "id": "812deb5e",
    "metadata": {},
    "source": [
-    "__curiosity_rule__ have a positive support, we can add it to dataset as follows:"
+    "__curiosity_rule__ has a positive support, we can add it to the dataset as follows:"
    ]
   },
   {
@@ -1653,7 +1653,7 @@
    "id": "10f6ea0c",
    "metadata": {},
    "source": [
-    "Let's apply Weak Labeling again with final rule set"
+    "Let's apply Weak Labeling again with the final rule set"
    ]
   },
   {
@@ -2077,7 +2077,7 @@
     "### Create training set\n",
     "\n",
     "When we are happy with our heuristics, it is time to combine them and compute weak labels for the training of our downstream model.\n",
-    "For this we will use the `MajorityVoter`.\n",
+    "For this, we will use the `MajorityVoter`.\n",
     "In the multi-label case, it sets the probability of a label to 0 or 1 depending on whether at least one non-abstaining rule voted for the respective label or not."
    ]
   },
@@ -2097,7 +2097,7 @@
    "id": "f82fe715-e703-457a-a158-78709f442bbd",
    "metadata": {},
    "source": [
-    "From our label model we get the training records together with its weak labels and probabilities.\n",
+    "From our label model, we get the training records together with its weak labels and probabilities.\n",
     "We will use the weak labels with a probability greater than 0.5 as labels for our training, and hence copy them to the `annotation` property of our records."
    ]
   },
@@ -2172,7 +2172,7 @@
    "id": "ec8cea7b-cd6f-408d-9667-249e3d66eac0",
    "metadata": {},
    "source": [
-    "The following steps are basically a copy&paste from the amazing documentation of the [Hugging Face transformers](https://huggingface.co/docs/transformers) library.\n",
+    "The following steps are basically a copy & paste from the amazing documentation of the [Hugging Face transformers](https://huggingface.co/docs/transformers) library.\n",
     "\n",
     "First, we will load the tokenizer corresponding to our model, which we choose to be the [distilled version](https://huggingface.co/distilbert-base-uncased) of the infamous BERT.\n",
     "\n",
@@ -2299,7 +2299,7 @@
    "id": "d5cf20aa-0117-438d-a960-59a85adb4d37",
    "metadata": {},
    "source": [
-    "Now we are ready to load our pretrained transformer model and prepare it for our task: multi-label text classification with 6 labels."
+    "Now we are ready to load our pre-trained transformer model and prepare it for our task: multi-label text classification with 6 labels."
    ]
   },
   {
@@ -2324,8 +2324,8 @@
    "id": "29498e65-8edc-4086-8ab7-f2db90f8a113",
    "metadata": {},
    "source": [
-    "The only thing missing for the training is the `Trainer` and its `TrainingArguments`.\n",
-    "To keep it simple, we mostly rely on the default arguments, that often work out of the box, but tweak a bit the batch size to train faster. \n",
+    "The only thing missing from the training is the `Trainer` and its `TrainingArguments`.\n",
+    "To keep it simple, we mostly rely on the default arguments, which often work out of the box, but tweak a bit the batch size to train faster. \n",
     "We also checked that 2 epochs are enough for our rather small dataset."
    ]
   },
@@ -2385,8 +2385,8 @@
    "id": "b77e8d7e-1463-42c8-96e2-13dfe98cc318",
    "metadata": {},
    "source": [
-    "We achieved an micro averaged *F1* of abut 0.54, which is not perfect, but a good baseline for this challenging dataset.\n",
-    "When inspecting the *F1s per label*, we clearly see that the worst performing labels are the ones with the poorest heuristics in terms of accuracy and coverage, which comes to no surprise."
+    "We achieved a micro-averaged *F1* of about 0.54, which is not perfect, but a good baseline for this challenging dataset.\n",
+    "When inspecting the *F1s per label*, we clearly see that the worst-performing labels are the ones with the poorest heuristics in terms of accuracy and coverage, which comes as no surprise."
    ]
   },
   {
@@ -2412,7 +2412,7 @@
    "source": [
     "### Define rules\n",
     "\n",
-    "Let us start by downloading our preprocessed dataset from the Hugging Face Hub, and log it to Argilla:"
+    "Let us start by downloading our preprocessed dataset from the Hugging Face Hub, and logging it to Argilla:"
    ]
   },
   {
@@ -2447,7 +2447,7 @@
    "metadata": {},
    "source": [
     "After uploading the dataset, we can explore and inspect it to find good heuristic rules.\n",
-    "For this we highly recommend the dedicated [*Define rules* mode](../../reference/webapp/features.html#weak-labeling) of the Argilla web app, that allows you to quickly iterate over heuristic rules, compute their metrics and save them.\n",
+    "For this, we highly recommend the dedicated [*Define rules* mode](../../reference/webapp/features.md#weak-labeling) of the Argilla web app, which allows you to quickly iterate over heuristic rules, compute their metrics and save them.\n",
     "\n",
     "Here we copy our rules found via the web app to the notebook for you to easily follow along the tutorial."
    ]
@@ -2499,7 +2499,7 @@
    "id": "fa6a2585-58cc-4eae-b5da-e31e29fd188d",
    "metadata": {},
    "source": [
-    "Let us get an overview of the our heuristics and how they perform:"
+    "Let us get an overview of our heuristics and how they perform:"
    ]
   },
   {
@@ -3374,7 +3374,7 @@
    "id": "08afaae4",
    "metadata": {},
    "source": [
-    "Let's create new rules and see their affects, if they are informative enough we can proceed by adding them to dataset"
+    "Let's create new rules and see their effects, if they are informative enough we can proceed by adding them to the dataset"
    ]
   },
   {
@@ -3458,7 +3458,7 @@
    "id": "245d572a",
    "metadata": {},
    "source": [
-    "Our assertion does not seem correct lets update this rule"
+    "Our assertion does not seem correct let us update this rule"
    ]
   },
   {
@@ -4116,7 +4116,7 @@
    "id": "9cda9587-7531-4780-9bc9-489f7e6d7523",
    "metadata": {},
    "source": [
-    "From our label model we get the training records together with its weak labels and probabilities.\n",
+    "From our label model, we get the training records together with its weak labels and probabilities.\n",
     "Since we are going to train an sklearn model, we will put the records in a pandas DataFrame that generally has a good integration with the sklearn ecosystem."
    ]
   },
@@ -4167,7 +4167,7 @@
     "We will use the [scikit-multilearn library](http://scikit.ml/) to wrap a multinomial **Naive Bayes classifier** that is suitable for classification with discrete features (e.g., word counts for text classification).\n",
     "The `BinaryRelevance` class transforms the multi-label problem with L labels into L single-label binary classification problems, so in the end we will automatically fit L naive bayes classifiers to our data.\n",
     "\n",
-    "The features for our classifier will be the counts of different word [n-grams](https://en.wikipedia.org/wiki/N-gram): that is, for each example we count the number of contiguous sequences of *n* words, where n goes from 1 to 5.\n",
+    "The features for our classifier will be the counts of different word [n-grams](https://en.wikipedia.org/wiki/N-gram): that is, for each example, we count the number of contiguous sequences of *n* words, where n goes from 1 to 5.\n",
     "We extract these features with the `CountVectorizer`.\n",
     "\n",
     "Finally, we will put our feature extractor and multi-label classifier in a sklearn pipeline that makes fitting and scoring the model a breeze."
@@ -4302,8 +4302,8 @@
    "id": "dbe8a43e-0405-4d45-b117-aff8865ed305",
    "metadata": {},
    "source": [
-    "We obtain a micro averaged F1 score of around 0.59, which again is not perfect but can serve as a decent baseline for future improvements.\n",
-    "Looking at the F1 per label, we see that the main problem is the recall of our heuristics and we should either define more of them, or try to find more general ones. "
+    "We obtain a micro-averaged F1 score of around 0.59, which again is not perfect but can serve as a decent baseline for future improvements.\n",
+    "Looking at the F1 per label, we see that the main problem is the recall of our heuristics and we should either define more of them or try to find more general ones. "
    ]
   },
   {
@@ -4413,9 +4413,9 @@
     "## Appendix B\n",
     "\n",
     "This appendix summarizes the minimal preprocessing done to [this multi-label classification dataset](https://www.kaggle.com/shivanandmn/multilabel-classification-dataset) from Kaggle.\n",
-    "You can download the original data (`train.csv`) following the Kaggle link.\n",
+    "You can download the original data (`train.csv`) by following the Kaggle link.\n",
     "\n",
-    "The preprocessing consists of extracting only the title from the research paper, and split the data into a train and validation set."
+    "The preprocessing consists of extracting only the title from the research paper and split the data into a train and validation set."
    ]
   },
   {
