checked tutorial section

--- a/docs/_source/tutorials/notebooks/labelling-textclassification-snorkel-weaksupervision.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-textclassification-snorkel-weaksupervision.ipynb
@@ -13,7 +13,7 @@
     "- 📰 For this example, we use the AG News dataset but you can follow this process to programmatically label any dataset.\n",
     "- 🤿 The train split without labels is used to build a training set with rules, Argilla and Snorkel's Label model.\n",
     "- 🔧 The test set is used for evaluating our weak labels, label model and downstream news classifier.\n",
-    "- 🤯 We achieve 0.82 macro avg. f1-score without using a single example from the original dataset and using a pretty lightweight model (scikit-learn's `MultinomialNB`).\n",
+    "- 🤯 We achieve a 0.82 macro avg. f1-score without using a single example from the original dataset and using a pretty lightweight model (scikit-learn's `MultinomialNB`).\n",
     "\n",
     "The following diagram shows the overall process for using Weak supervision with Argilla:\n",
     "\n",
@@ -27,12 +27,12 @@
    "source": [
     "## Introduction\n",
     "\n",
-    "> *Weak supervision is a branch of machine learning where noisy, limited, or imprecise sources are used to provide supervision signal for labeling large amounts of training data in a supervised learning setting. This approach alleviates the burden of obtaining hand-labeled data sets, which can be costly or impractical. Instead, inexpensive weak labels are employed with the understanding that they are imperfect, but can nonetheless be used to create a strong predictive model.* [[Wikipedia]](https://en.wikipedia.org/wiki/Weak_supervision)\n",
+    "> *Weak supervision is a branch of machine learning where noisy, limited, or imprecise sources are used to provide supervision signals for labeling large amounts of training data in a supervised learning setting. This approach alleviates the burden of obtaining hand-labeled data sets, which can be costly or impractical. Instead, inexpensive weak labels are employed with the understanding that they are imperfect, but can nonetheless be used to create a strong predictive model.* [[Wikipedia]](https://en.wikipedia.org/wiki/Weak_supervision)\n",
     "\n",
     "For a broader introduction to weak supervision, as well as further references, we recommend the excellent [overview by Alex Ratner et al.](https://www.snorkel.org/blog/weak-supervision).\n",
     "\n",
     "This tutorial aims to be a practical introduction to weak supervision and will walk you through its entire process.\n",
-    "First we will generate weak labels with *Argilla*, combine these labels with *Snorkel*, and finally train a classifier with *Scikit Learn*."
+    "First, we will generate weak labels with *Argilla*, combine these labels with *Snorkel*, and finally train a classifier with *Scikit Learn*."
    ]
   },
   {
@@ -76,7 +76,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "For this tutorial, you'll need to install the Argilla client and a few third party libraries using `pip`:"
+    "For this tutorial, you'll need to install the Argilla client and a few third-party libraries using `pip`:"
    ]
   },
   {
@@ -336,8 +336,8 @@
    "id": "d57bf497-2a75-4c79-9487-b3a84602bbea",
    "metadata": {},
    "source": [
-    "In a second step we log the train split without labels.\n",
-    "Remember, our goal is to programmatically build a training set using rules and weak supervision."
+    "In the second step, we log the train split without labels.\n",
+    "Remember that our goal is to programmatically build a training set using rules and weak supervision."
    ]
   },
   {
@@ -426,7 +426,7 @@
     "\n",
     "The goal at this step is to **denoise** the weak labels we've just created using rules. There are several approaches to this problem using different statistical methods.\n",
     "\n",
-    "In this tutorial, we're going to use Snorkel but you can actually use any other Label model or weak supervision method, such as FlyingSquid for example (see the [Weak supervision guide](../../guides/techniques/weak_supervision.html) for more details).\n",
+    "In this tutorial, we're going to use Snorkel but you can actually use any other Label model or weak supervision method, such as FlyingSquid for example (see the [Weak supervision guide](../../practical_guides/annotation_workflows/weak_supervision.ipynb) for more details).\n",
     "For convenience, Argilla defines a simple wrapper over Snorkel's Label Model so it's easier to use with Argilla weak labels and datasets\n",
     "\n",
     "Let's first read the rules defined in our dataset and create our weak labels:"
@@ -771,7 +771,7 @@
     "## 4. Prepare our training set\n",
     "\n",
     "Now, we already have a \"denoised\" training set, which we can prepare for training a downstream model. \n",
-    "The label model predict returns `TextClassificationRecord` objects with the `predictions` from the label model. \n",
+    "The label model predictions return `TextClassificationRecord` objects with the `predictions` from the label model. \n",
     "\n",
     "We can either refine and review these records using the Argilla web app, use them as is, or filter them by score, for example.\n",
     "\n",
@@ -1088,9 +1088,9 @@
     "\n",
     "In this tutorial, we saw how you can leverage weak supervision to quickly build up a large training data set, and use it for the training of a first lightweight model.\n",
     "\n",
-    "*Argilla* is a very handy tool to start the weak supervision process by making it easy to find a good set of starting rules, and to reiterate on them dynamically.\n",
-    "Since *Argilla* also provides built-in support for the most common label models, you can get from rules to weak labels in a few straight forward steps.\n",
-    "For more suggestions on how to leverage weak labels, you can checkout our [weak supervision guide](../../guides/techniques/weak_supervision.html) where we describe an [interesting approach](../../guides/techniques/weak_supervision.html#Joint-Model-with-Weasel) to jointly train the label and a transformers downstream model."
+    "*Argilla* is a very handy tool to start the weak supervision process by making it easy to find a good set of starting rules and to reiterate them dynamically.\n",
+    "Since *Argilla* also provides built-in support for the most common label models, you can get from rules to weak labels in a few straightforward steps.\n",
+    "For more suggestions on how to leverage weak labels, you can check out our [weak supervision guide](../../practical_guides/annotation_workflows/weak_supervision.ipynb) where we describe an [interesting approach](../../practical_guides/annotation_workflows/weak_supervision.ipynb#Joint-Model-with-Weasel) to jointly train the label and a transformers downstream model."
    ]
   },
   {
@@ -1102,7 +1102,7 @@
     "## Appendix I: Log datasets to the Hugging Face Hub\n",
     "\n",
     "Here we will show you how we pushed our Argilla datasets (records) to the [Hugging Face Hub](https://huggingface.co/datasets).\n",
-    "In this way you can effectively version any of your Argilla datasets."
+    "In this way, you can effectively version any of your Argilla datasets."
    ]
   },
   {
