--- a/docs/_source/tutorials/notebooks/labelling-tokenclassification-basics.ipynb
+++ b/docs/_source/tutorials/notebooks/labelling-tokenclassification-basics.ipynb
@@ -19,7 +19,7 @@
    "metadata": {},
    "source": [
     ".. note::\n",
-    "This tutorial applies only to Text2Text, Token Classification and Text Classification datasets. To assign annotations in Feedback datasets follow [this guide](../../guides/llms/practical_guides/assign_annotations.md)."
+    "This tutorial applies only to Text2Text, Token Classification and Text Classification datasets. To assign annotations in Feedback datasets follow [this guide](../../practical_guides/assign_records.md)."
    ]
   },
   {
@@ -35,7 +35,7 @@
     "\n",
     "2. we can split our dataset into different datasets that have the records assigned to each user and log them in their personal workspaces.\n",
     "\n",
-    "You may want to use option 1 if you want to keep the whole dataset available to see and explore for every team member but still you want them to focus on a set of records when they annotate. This can be interesting if your annotators will also make weak labeling rules based on the annotations of the whole team.\n",
+    "You may want to use option 1 if you want to keep the whole dataset available to see and explore for every team member but still, you want them to focus on a set of records when they annotate. This can be interesting if your annotators also make weak labeling rules based on the annotations of the whole team.\n",
     "\n",
     "Option 2 is better if you want each team member to work independently and not see the records that other teammates are working on. This can be interesting if you want to measure annotator agreement afterwards.\n",
     "\n",
@@ -81,7 +81,7 @@
    "source": [
     "## Setup\n",
     "\n",
-    "For this tutorial, you'll need to install the Argilla client and a few third party libraries using `pip`:"
+    "For this tutorial, you'll need to install the Argilla client and a few third-party libraries using `pip`:"
    ]
   },
   {
@@ -146,7 +146,7 @@
     "### Load an existing Argilla dataset\n",
     "\n",
     "We can load a whole dataset that was already logged in our Argilla instance or a selection of records in a dataset defined by a query. In this case, we have included a query so that we only load the records that haven't been annotated yet.\n",
-    "Learn more about queries [here](../../guides/query_datasets.md)."
+    "Learn more about queries [here](../../practical_guides/filter_dataset.md)."
    ]
   },
   {
@@ -184,7 +184,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Learn more about loading and creating Argilla datasets [here](../../guides/log_load_and_prepare_data.ipynb)."
+    "Learn more about loading and creating Argilla datasets [here](../../practical_guides/create_dataset.md)."
    ]
   },
   {
@@ -193,7 +193,7 @@
    "source": [
     "## 🔀 Make a random assignment\n",
     "\n",
-    "As a first step, we want to get the list of the users that will be annotating our dataset."
+    "As a first step, we want to get the list of the users who will be annotating our dataset."
    ]
   },
   {
@@ -205,7 +205,7 @@
     "# get workspace where the dataset is (or will be) located\n",
     "ws = rg.Workspace.from_name(\"my_workspace\")\n",
     "# get the list of users with access to the workspace\n",
-    "# make sure that all users that will work on the dataset have access to the workspace\n",
+    "# make sure that all users who will work on the dataset have access to the workspace\n",
     "# optional: filter users to get only those with annotator role\n",
     "users = [u for u in rg.User.list() if u.role == \"annotator\"]"
    ]
@@ -264,7 +264,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now we are ready to start making the assignments. To do this, we will divide our dataset in chunks of the same length as the available annotators and save the assignments in a dictionary."
+    "Now we are ready to start making the assignments. To do this, we will divide our dataset into chunks of the same length as the available annotators and save the assignments in a dictionary."
    ]
   },
   {
@@ -278,7 +278,7 @@
     "# build a dictionary where the key is the username and the value is the list of records assigned to them\n",
     "assignments = defaultdict(list)\n",
     "\n",
-    "# divide your dataset in chunks of the same length as the users list and make the assignments\n",
+    "# divide your dataset into chunks of the same length as the users list and make the assignments\n",
     "n = len(users)\n",
     "chunked_records = [ds[i:i + n] for i in range(0, len(ds), n)]\n",
     "for chunk in chunked_records:\n",
@@ -300,7 +300,7 @@
     "### Option 1\n",
     "If you want to follow option 1, where we have 1 dataset accessible to all teammates, you need to save the assignments as record metadata before logging them.\n",
     "\n",
-    "Make sure that you log this dataset in a workspace that all the users that will work on it have access to."
+    "Make sure that you log this dataset in a workspace that all the users who will work on it have access to."
    ]
   },
   {
@@ -330,9 +330,9 @@
    "metadata": {},
    "source": [
     "### Option 2\n",
-    "If you're following option 2, where annotators only have access to the records assigned to them, you need to log each user's assignments as a separate dataset in their indivudal workspace.\n",
+    "If you're following option 2, where annotators only have access to the records assigned to them, you need to log each user's assignments as a separate dataset in their individual workspace.\n",
     "\n",
-    "For this to work, users that are going to annotate should have the `annotator` role so that they cannot access each other's workspaces. Whoever is supervising the project should have an `admin` role so they can work with datasets tied to this project.\n",
+    "For this to work, users who are going to annotate should have the `annotator` role so that they cannot access each other's workspaces. Whoever is supervising the project should have an `admin` role so they can work with datasets tied to this project.\n",
     "\n",
     "Learn more about managing user roles and access [here](../../getting_started/installation/configurations/user_management.md).\n"
    ]
@@ -367,7 +367,7 @@
     "\n",
     "Now it's time to open the Argilla UI and start annotating!\n",
     "\n",
-    "If you followed option 1, you want to ask your annotators to open the dataset in the UI and select their username under `Metadata`>`user` and click on the `Filter` button. This will filter the records assigned to them automatically.\n",
+    "If you followed option 1, you want to ask your annotators to open the dataset in the UI, select their username under `Metadata`>`user` and click on the `Filter` button. This will filter the records assigned to them automatically.\n",
     "\n",
     "<img src=\"../../_static/tutorials/labelling-tokenclassification-basics/labelling-tokenclassification-basics-screenshot.png\" alt=\"Using the metadata filter to select annotations assigned to a specific person\" style=\"width: 1100px;\">\n",
     "\n",
@@ -380,7 +380,7 @@
    "source": [
     "## Summary\n",
     "\n",
-    "In this tutorial, we learned how to split a dataset into random chunks so you can assign records to each member of your annotation team in two ways. In the first way, we kept a single dataset so that our team can choose whether to see the whole dataset or focus on the records assigned to them. In the second way, each annotator has a dataset with the records assigned to them and they cannot access the records of other teammates.\n",
+    "In this tutorial, we learned how to split a dataset into random chunks so you can assign records to each member of your annotation team in two ways. In the first way, we kept a single dataset so that our team could choose whether to see the whole dataset or focus on the records assigned to them. In the second way, each annotator has a dataset with the records assigned to them and they cannot access the records of other teammates.\n",
     "\n",
     "This allows you to manage your annotation team and help them work more efficiently. 🚀"
    ]
