fixing some warnings and code issues

--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_learning_with_setfit.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_learning_with_setfit.ipynb
@@ -118,7 +118,7 @@
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
     "    api_key=\"owner.apikey\",\n",
-    "    workspace=\"my-workspace\"\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
