--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
@@ -113,9 +113,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
