--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_data_with_semantic_search.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_data_with_semantic_search.ipynb
@@ -116,9 +116,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
@@ -297,12 +299,12 @@
     "    label_schema=[\"change_details\", \"card\", \"atm\", \"top_up\", \"balance\", \"transfer\", \"exchange_rate\", \"pin\"]\n",
     ")\n",
     "\n",
-    "rg.configure_dataset(name=\"banking77-topics\", settings=settings)\n",
+    "rg.configure_dataset_settings(name=\"banking77-topics\", settings=settings)\n",
     "\n",
     "rg.log(\n",
     "    name=\"banking77-topics\",\n",
     "    records=rg_ds,\n",
-    "    chunk_size=50,\n",
+    "    batch_size=50,\n",
     ")"
    ]
   },
