--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_ner.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/weak_supervision_ner.ipynb
@@ -101,7 +101,7 @@
    "outputs": [],
    "source": [
     "%pip install argilla datasets spacy -qqq\n",
-    "%pip install --user git+https://github.com/NorskRegnesentral/skweak -qqq\n",
+    "%pip install skweak\n",
     "!python -m spacy download en_core_web_md"
    ]
   },
@@ -144,9 +144,11 @@
    "source": [
     "# Replace api_url with the url to your HF Spaces URL if using Spaces\n",
     "# Replace api_key if you configured a custom API key\n",
+    "# Replace workspace with the name of your workspace\n",
     "rg.init(\n",
     "    api_url=\"http://localhost:6900\", \n",
-    "    api_key=\"admin.apikey\"\n",
+    "    api_key=\"owner.apikey\",\n",
+    "    workspace=\"admin\"\n",
     ")"
    ]
   },
