fixing some code errors

--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_text_classification_with_active_learning.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/few_shot_text_classification_with_active_learning.ipynb
@@ -155,7 +155,7 @@
    "id": "43edb962-ce5b-44ad-9175-09143d882c95",
    "metadata": {},
    "source": [
-    "## The TREC dataset"
+    "## The AG's News dataset"
    ]
   },
   {
@@ -356,21 +356,21 @@
     "import argilla as rg\n",
     "\n",
     "# Choose a name for the dataset\n",
-    "DATASET_NAME = \"trec_with_active_learning\"\n",
+    "DATASET_NAME = \"ag_with_active_learning\"\n",
     "\n",
     "# Define the labeling schema\n",
-    "labels = trec[\"train\"].features[\"coarse_label\"].names\n",
+    "labels = raw_dataset[\"train\"].features[\"label\"].names\n",
     "settings = rg.TextClassificationSettings(label_schema=labels)\n",
     "\n",
     "# Create a dataset with a label schema\n",
-    "rg.configure_dataset(name=DATASET_NAME, settings=settings)\n",
+    "rg.configure_dataset_settings(name=DATASET_NAME, settings=settings)\n",
     "\n",
     "# Create records from the initial batch\n",
     "records = [\n",
     "    rg.TextClassificationRecord(\n",
-    "        text=trec[\"train\"][\"text\"][idx],\n",
+    "        text=raw_dataset[\"train\"][\"text\"][idx],\n",
     "        metadata={\"batch_id\": 0},\n",
-    "        id=idx,\n",
+    "        id=int(idx),\n",
     "    )\n",
     "    for idx in initial_indices\n",
     "]\n",
@@ -402,7 +402,7 @@
     "from sklearn.metrics import accuracy_score\n",
     "\n",
     "# Define some helper variables\n",
-    "LABEL2INT = trec[\"train\"].features[\"coarse_label\"].str2int\n",
+    "LABEL2INT = raw_dataset[\"train\"].features[\"label\"].str2int\n",
     "ACCURACIES = []\n",
     "\n",
     "# Set up the active learning loop with the listener decorator\n",
