--- a/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
+++ b/docs/_source/tutorials_and_integrations/tutorials/other_datasets/label_errors_cleanlab.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# 🧹 Find and clean label errors with cleanlab\n",
     "\n",
-    "In this tutorial, we will leverage *Argilla* and [cleanlab](https://github.com/cgnorthcutt/cleanlab) to find, , and correct potential label errors.\n",
+    "In this tutorial, we will leverage *Argilla* and [cleanlab](https://github.com/cgnorthcutt/cleanlab) to find, uncover and correct potential label errors.\n",
     "You can do this by following 4 basic MLOps Steps:\n",
     "\n",
     "- 💾 load a dataset with potential label errors, here we use the [ag_news](https://huggingface.co/datasets/ag_news) dataset;\n",
